// 订单服务
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.lib.proto";
option java_outer_classname = "OrderServiceProto";
option objc_class_prefix = "HLW";

//package protobuf;

// The greeting service definition.
service OrderService {
  // Sends a greeting
  rpc create (CreateRequest) returns (CreateReply) {}
}

// The request message containing the user's name.
message CreateRequest {
  string cart_id = 1;
}

// The response message containing the greetings
message CreateReply {
  string id = 1;
}

